// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<withPropsOnChange(HorizontalGutter)
  className="Stream-root"
  size="double"
>
  <withPropsOnChange(HorizontalGutter)
    size="half"
  >
    <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
      me={null}
    />
    <PostCommentFormFake />
  </withPropsOnChange(HorizontalGutter)>
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
  />
  <withPropsOnChange(HorizontalGutter)
    aria-live="polite"
    id="talk-comments-stream-log"
    role="log"
  >
    <withPropsOnChange(HorizontalGutter)
      key="comment-1"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
    <withPropsOnChange(HorizontalGutter)
      key="comment-2"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
  </withPropsOnChange(HorizontalGutter)>
</withPropsOnChange(HorizontalGutter)>
`;

exports[`when there is more disables load more button 1`] = `
<withPropsOnChange(HorizontalGutter)
  className="Stream-root"
  size="double"
>
  <withPropsOnChange(HorizontalGutter)
    size="half"
  >
    <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
      me={null}
    />
    <PostCommentFormFake />
  </withPropsOnChange(HorizontalGutter)>
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
  />
  <withPropsOnChange(HorizontalGutter)
    aria-live="polite"
    id="talk-comments-stream-log"
    role="log"
  >
    <withPropsOnChange(HorizontalGutter)
      key="comment-1"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
    <withPropsOnChange(HorizontalGutter)
      key="comment-2"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
    <Localized
      id="comments-stream-loadMore"
    >
      <withPropsOnChange(Button)
        aria-controls="talk-comments-stream-log"
        disabled={true}
        fullWidth={true}
        id="talk-comments-stream-loadMore"
        onClick={[Function]}
        variant="outlined"
      >
        Load More
      </withPropsOnChange(Button)>
    </Localized>
  </withPropsOnChange(HorizontalGutter)>
</withPropsOnChange(HorizontalGutter)>
`;

exports[`when there is more renders a load more button 1`] = `
<withPropsOnChange(HorizontalGutter)
  className="Stream-root"
  size="double"
>
  <withPropsOnChange(HorizontalGutter)
    size="half"
  >
    <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
      me={null}
    />
    <PostCommentFormFake />
  </withPropsOnChange(HorizontalGutter)>
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
  />
  <withPropsOnChange(HorizontalGutter)
    aria-live="polite"
    id="talk-comments-stream-log"
    role="log"
  >
    <withPropsOnChange(HorizontalGutter)
      key="comment-1"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
    <withPropsOnChange(HorizontalGutter)
      key="comment-2"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
    <Localized
      id="comments-stream-loadMore"
    >
      <withPropsOnChange(Button)
        aria-controls="talk-comments-stream-log"
        disabled={false}
        fullWidth={true}
        id="talk-comments-stream-loadMore"
        onClick={[Function]}
        variant="outlined"
      >
        Load More
      </withPropsOnChange(Button)>
    </Localized>
  </withPropsOnChange(HorizontalGutter)>
</withPropsOnChange(HorizontalGutter)>
`;

exports[`when use is logged in renders correctly 1`] = `
<withPropsOnChange(HorizontalGutter)
  className="Stream-root"
  size="double"
>
  <withPropsOnChange(HorizontalGutter)
    size="half"
  >
    <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
      me={Object {}}
    />
    <withContext(withContext(createMutationContainer(PostCommentFormContainer)))
      assetID="asset-id"
    />
  </withPropsOnChange(HorizontalGutter)>
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
  />
  <withPropsOnChange(HorizontalGutter)
    aria-live="polite"
    id="talk-comments-stream-log"
    role="log"
  >
    <withPropsOnChange(HorizontalGutter)
      key="comment-1"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={Object {}}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={Object {}}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
    <withPropsOnChange(HorizontalGutter)
      key="comment-2"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={Object {}}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        asset={
          Object {
            "id": "asset-id",
            "isClosed": false,
          }
        }
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={Object {}}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
      />
    </withPropsOnChange(HorizontalGutter)>
  </withPropsOnChange(HorizontalGutter)>
</withPropsOnChange(HorizontalGutter)>
`;
